[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discordflow"
version = "0.3.4"
authors = [
  { name="Watin Promfiy", email="watin@example.com" },
]
description = "A lightweight MLflow clone that logs ML training metrics, parameters, and artifacts directly to Discord webhooks — with Forum thread support."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]
keywords = [
    "mlflow", "discord", "machine-learning", "experiment-tracking",
    "webhooks", "deep-learning", "forum", "training-monitor",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
system  = ["psutil>=5.9"]          # CPU, RAM, Disk, Network metrics
gpu     = ["pynvml>=11.0"]        # NVIDIA GPU metrics
dev     = ["build", "twine", "pytest", "matplotlib"]

[project.urls]
"Homepage"      = "https://github.com/E27-25/discordflow"
"Bug Tracker"   = "https://github.com/E27-25/discordflow/issues"
"Documentation" = "https://github.com/E27-25/discordflow#readme"
"Changelog"     = "https://github.com/E27-25/discordflow/releases"